# r3d

./: .gitignore  Cargo.toml  README.md  csg.pgm
.github/workflows/: rust.yml
buzz/: Cargo.toml
buzz/examples/: basic.rs  csg.rs  cylinders.rs  hello.rs  lights.rs  particles.rs  rtiw-cover.rs  suzanne.rs  teapot.rs
buzz/src/: camera.rs  csg.rs  cube.rs  cylinder.rs  facet.rs  lib.rs  main.rs  material.rs  opener.rs  plane.rs  renderer.rs  sampler.rs  sphere.rs  transformed.rs  util.rs
buzz/src/object/: facet.rs  mod.rs  simple_object.rs
buzz/src/objectgeo/: csg.rs  cube.rs  cylinder.rs  facet.rs  mod.rs  plane.rs  sphere.rs  transformed.rs
data/: t-rex-skull.stl
geo/: Cargo.toml
geo/src/: aabb.rs  bvh.rs  lib.rs  ray.rs  sphere.rs  stl.rs  triangle.rs  vec3.rs
geo/src/mesh/: mod.rs  obj.rs  stl.rs
geo/src/primitive/: aabb.rs  mat4.rs  mod.rs  plane.rs  polyline.rs  ray.rs  sphere.rs  (+2 more)
isovoxel/: Cargo.toml
isovoxel/examples/: hollow_cube.rs  sphere.rs
isovoxel/src/: lib.rs  renderer.rs
ivo/: Cargo.toml
ivo/examples/: archi.rs  automata.rs  blocks.rs  bridge.rs  building.rs  coins.rs  helix.rs  hollow_cube.rs  hourglass.rs  icsg.rs  islands.rs  octa.rs  pyramid.rs  ring.rs  slabs.rs  sphere.rs  star.rs  sym.rs  tower.rs  voxels.rs
ivo/src/: lib.rs  spatial_index.rs
l/: Cargo.toml
l/examples/: cube.rs  expe.rs  fun.rs  isovoxel.rs  sdf.rs  skyscrapers.rs  trex.rs
l/src/: camera.rs  lib.rs  renderer.rs
l/src/object/: cube.rs  facet.rs  grid.rs  mod.rs  sdf.rs  zslicer.rs
sketch-utils/: Cargo.toml
sketch-utils/src/: lib.rs  opener.rs
(+15 files in other folders)
